hphp/hack/test/typecheck/lambda/lambda_bad_arity2.php.exp
File "lambda_bad_arity2.php", line 15, characters 7-14:
Too many arguments (Typing[4105])
File "lambda_bad_arity2.php", line 6, characters 5-32:
Definition is here
